--- a/personal_page/package.json
+++ b/personal_page/package.json
@@ -1,7 +1,7 @@
 {
   "name": "personal_page",
   "version": "0.1.0",
- "homepage": "https://gitname.github.io/react-gh-pages",
+ "homepage": "https://maxlan-dev.github.io",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
