--- a/personal_page/package.json
+++ b/personal_page/package.json
@@ -1,14 +1,16 @@
 {
   "name": "personal_page",
   "version": "0.1.0",
- "homepage": "https://maxlan-dev.github.io",
+  "homepage": "https://maxlan-dev.github.io",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
